// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`createControllerInfoBlock makes use of options 1`] = `
<div
  style="border-top: solid 1px var(--sui-border-color, #ccc); font-size: 0.9em; padding: var(--sui-space-sm, 0.5em) var(--sui-space-lg, 1.5em);"
>
  <span />
  <a
    href="https://test.com"
  />
  <span />
  <a
    href="https://test.com"
  />
  <span />
  <a
    href="https://solid.com/"
  />
  <span />
</div>
`;

exports[`createControllerInfoBlock runs createControllerInfoBlock 1`] = `
<div
  style="border-top: solid 1px var(--sui-border-color, #ccc); font-size: 0.9em; padding: var(--sui-space-sm, 0.5em) var(--sui-space-lg, 1.5em);"
>
  <span />
  <a
    href="https://test.com"
  />
  <span />
  <a
    href="https://test.com"
  />
  <span />
  <a
    href="https://solidproject.org"
  />
  <span />
</div>
`;

exports[`footer is exposed on public API 1`] = `undefined`;

exports[`rebuildFooter creates a link 1`] = `[Function]`;

exports[`rebuildFooter does NOT creates a link in the footer 1`] = `[Function]`;
